feat: :recycle: Updates data models from UVG 1e to SDM

--- a/src/scss/sdm.scss
+++ b/src/scss/sdm.scss
@@ -18,7 +18,7 @@
   @include meta.load-css('components/resource');
   @include meta.load-css('components/items');
   @include meta.load-css('components/effects');
-
+  @include meta.load-css('components/sheet');
   // // Exemplo de uso de mixins com namespace
   // .special-item {
   //   @include mx.hover-effect(10%);
