--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -1,82 +1,54 @@
 {{! Gear Tab }}
-<section class='tab gear {{tab.cssClass}}' data-group='primary' data-tab='gear'>
+<section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='features'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
       <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div>
       <div class='item-controls'>
         {{#if @root.editable}}
-          <a
-            class='item-control item-create'
-            title='{{localize "DOCUMENT.Create" type='Item'}}'
-            data-action='createDoc'
-            data-document-class='Item'
-            data-type='gear'
-          >
-            <i class='fas fa-plus'></i>
-            {{localize 'DOCUMENT.New' type='item'}}
-          </a>
+        <a class='item-control item-create' title='{{localize "DOCUMENT.Create" type=' Item'}}' data-action='createDoc'
+          data-document-class='Item' data-type='gear'>
+          <i class='fas fa-plus'></i>
+          {{localize 'DOCUMENT.New' type='item'}}
+        </a>
         {{/if}}
       </div>
     </li>
     {{#each gear as |item id|}}
-      <li
-        class='item flexrow'
-        data-item-id='{{item._id}}'
-        data-drag='true'
-        data-document-class='Item'
-      >
-        <div class='item-name'>
-          <div class='item-image'>
-              <img
-                src='{{item.img}}'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-          </div>
-          <div >{{item.name}}</div>
+    <li class='item flexrow' data-item-id='{{item._id}}' data-drag='true' data-document-class='Item'>
+      <div class='item-name'>
+        <div class='item-image'>
+          <img src='{{item.img}}' title='{{item.name}}' width='24' height='24' />
+        </div>
+        <div>{{item.name}}</div>
+      </div>
+      <div class='item-formula item-prop flexrow'>
+        <div>
           {{#if (eq item.type 'weapon')}}
-            <a class='rollable' data-roll-type='item' data-action='roll'>
-              <img
-                src='icons/weapons/swords/sword-simple-white.webp'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-            </a>
-            {{#if item.system.versatile}}
-            <a class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
-              <img
-                src='icons/weapons/swords/swords-short.webp'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              />
-            </a>
-            {{/if}}
+          <div class='rollable' data-roll-type='item' data-action='roll'>
+            <img src='icons/weapons/swords/sword-simple-white.webp' title='{{item.name}}' width='24' height='24' />
+          </div>
           {{/if}}
         </div>
-        <div class='item-formula item-prop'>{{item.system.formula}}</div>
-        <div class='item-controls'>
-          <a
-            class='item-control item-edit'
-            title='{{localize "DOCUMENT.Update" type='Gear'}}'
-            data-action='viewDoc'
-          >
-            <i class='fas fa-edit'></i>
-          </a>
-          {{#if @root.editable}}
-            <a
-              class='item-control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Gear'}}'
-              data-action='deleteDoc'
-            >
-              <i class='fas fa-trash'></i>
-            </a>
+        <div>
+          {{#if item.system.versatile}}
+          <div class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
+            <img src='icons/weapons/swords/swords-short.webp' title='{{item.name}}' width='24' height='24' />
+          </div>
           {{/if}}
         </div>
-      </li>
+      </div>
+      <div class='item-controls'>
+        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Gear'}}' data-action='viewDoc'>
+          <i class='fas fa-edit'></i>
+        </a>
+        {{#if @root.editable}}
+        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=' Gear'}}' data-action='deleteDoc'>
+          <i class='fas fa-trash'></i>
+        </a>
+        {{/if}}
+      </div>
+    </li>
     {{/each}}
   </ol>
 
