--- a/templates/actor/header.hbs
+++ b/templates/actor/header.hbs
@@ -1,100 +1,191 @@
 {{! Sheet Header }}
-<header class='sheet-header'>
-  <img class='profile-img' src='{{actor.img}}' data-edit='img' data-action='onEditImage' title='{{actor.name}}'
-    height='100' width='100' />
-  <div class='header-fields'>
-    <div class='document-name'>
-      <input name='name' type='text' value='{{actor.name}}' placeholder='Name' />
+<div>
+  <header class='sheet-header'>
+    <div class="flexcol flex-between flex-center">
+      <img class='profile-img' src='{{actor.img}}' data-edit='img' data-action='onEditImage' title='{{actor.name}}'
+        height='100' width='100' />
+      <div class="flexcol flex-group-center rollable" data-context='rollable' data-action='heroicHealing'>
+        <label class='resource-label'>Heroic Dice <i class="fas fa-dice-d6"></i></label>
+        <div class='resource-content flexrow flex-center'>
+          {{system.heroics.value}}
+        </div>
+      </div>
     </div>
-    {{! The grid classes are defined in scss/global/_grid.scss. To use,
-    use both the "grid" and "grid-Ncol" class where "N" can be any number
-    from 1 to 12 and will create that number of columns. }}
-    <div class='resources grid grid-3col'>
-
-      {{! "flex-group-center" is also defined in the _grid.scss file
-      and it will add a small amount of padding, a border, and will
-      center all of its child elements content and text. }}
-      <div class='resource flex-group-center'>
-        {{#if (isCharacter actor.type)}}
-        <label for='system.life.max' class='resource-label'>
-          {{localize 'SDM.Actor.base.FIELDS.life.max.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input type='text' name='system.life.value' value='{{system.life.final_remaining}}' data-dtype='Number' />
-          <span> / </span>
-          <input type='text' name='system.life.max' value='{{system.life.final_max}}' data-dtype='Number' disabled />
-        </div>
-        {{/if}}
-      </div>
-
-      {{#if (eq actor.type 'character')}}
-      <div class='resource flex-group-center'>
-        <label for="system.level" class='resource-label'>
-          {{localize 'SDM.Actor.Character.FIELDS.level.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input type='text' name='system.level' value='{{system.level}}' data-dtype='Number' disabled />
-        </div>
-      </div>
-      {{/if}}
-
-      <div class='resource flex-group-center'>
-        {{#if (eq actor.type 'character')}}
-        <label for="system.experience" class='resource-label'>
-          {{localize 'SDM.Actor.Character.FIELDS.experience.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          {{#if isGM}}
+    <div class='header-fields'>
+      {{!-- <div class='document-name'> --}}
+        <div class="grid grid-4col">
+          <div class="grid-span-1">
+            <label for="" class='resource-label'>
+              Name
+            </label>
+            <input name='name' type='text' value='{{actor.name}}' placeholder='Name' />
+          </div>
+          {{#if (eq actor.type 'character')}}
+          <div class="grid-span-1">
+            <label for="system.experience" class='resource-label'>
+              {{localize 'SDM.Actor.Character.FIELDS.experience.label'}}
+            </label>
+            <div class='resource-content flexrow flex-center flex-between'>
+              {{#if isGM}}
+              <input type='text' name='system.experience' value='{{system.experience}}' data-dtype='Text' />
+              {{else}}
+              <input type='text' name='system.experience' value='{{system.experience}}' data-dtype='Text' disabled />
+              {{/if}}
+            </div>
+            {{/if}}
+          </div>
+          <div class="grid-span-1">
+            <label for="system.experience" class='resource-label'>
+              Character Experience
+            </label>
             <input type='text' name='system.experience' value='{{system.experience}}' data-dtype='Text' />
-          {{else}}
-            <input type='text' name='system.experience' value='{{system.experience}}' data-dtype='Text' disabled />
+          </div>
+          <div class="grid-span-1">
+            <label for="system.level" class='resource-label'>
+              {{localize 'SDM.Actor.Character.FIELDS.level.label'}}
+            </label>
+            <div class='resource-content flexrow flex-center flex-between'>
+              <input type='text' name='system.level' value='{{system.level}}' data-dtype='Number' disabled />
+            </div>
+          </div>
+        </div>
+        {{!--
+      </div> --}}
+      {{! The grid classes are defined in scss/global/_grid.scss. To use,
+      use both the "grid" and "grid-Ncol" class where "N" can be any number
+      from 1 to 12 and will create that number of columns. }}
+      <div class='resources grid grid-4col'>
+
+        {{! "flex-group-center" is also defined in the _grid.scss file
+        and it will add a small amount of padding, a border, and will
+        center all of its child elements content and text. }}
+        <div class='resource flex-group-center'>
+          {{#if (isCharacter actor.type)}}
+          <label for='system.life.max' class='resource-label'>
+            {{localize 'SDM.Actor.base.FIELDS.life.max.label'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.life.value' value='{{system.life.final_remaining}}' data-dtype='Number' />
+            <span> / </span>
+            <input type='text' name='system.life.max' value='{{system.life.final_max}}' data-dtype='Number' disabled />
+          </div>
           {{/if}}
         </div>
-        {{/if}}
 
-        {{#if (eq actor.type 'npc')}}
-        <label class='resource-label'>
-          {{localize 'SDM.Actor.NPC.FIELDS.cr.label'}} / {{localize 'SDM.Actor.NPC.xp.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input type='text' name='system.cr' value='{{system.cr}}' data-dtype='Number' />
-          <span></span>
-          <input type='text' disabled='true' name='system.xp' value='{{system.xp}}' data-dtype='Number' />
+        {{#if (eq actor.type 'character')}}
+        <div class='resource flex-group-center'>
+          <label for="system.level" class='resource-label'>
+            {{localize 'SDM.Actor.Character.FIELDS.level.label'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.level' value='{{system.level}}' data-dtype='Number' disabled />
+          </div>
         </div>
         {{/if}}
-      </div>
 
-      {{#if (eq actor.type 'character')}}
-      <div class='resource flex-group-center'>
-        <label for="system.bonus" class='resource-label'>
-          {{localize 'SDM.Actor.Character.FIELDS.bonus.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input type='text' name='system.bonus' value='{{system.bonus}}' data-dtype='Number' disabled />
+        <div class='resource flex-group-center'>
+          {{#if (eq actor.type 'npc')}}
+          <label class='resource-label'>
+            {{localize 'SDM.Actor.NPC.FIELDS.cr.label'}} / {{localize 'SDM.Actor.NPC.xp.label'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.cr' value='{{system.cr}}' data-dtype='Number' />
+            <span></span>
+            <input type='text' disabled='true' name='system.xp' value='{{system.xp}}' data-dtype='Number' />
+          </div>
+          {{/if}}
         </div>
-      </div>
-      {{/if}}
 
-      {{#if (eq actor.type 'character')}}
-      <div class='resource flex-group-center'>
-        <label for="system.armor" class='resource-label'>
-          {{localize 'SDM.Actor.Character.FIELDS.armor.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input type='text' name='system.armor' value='{{system.armor}}' data-dtype='Number' disabled />
+        {{#if (eq actor.type 'character')}}
+        <div class='resource flex-group-center'>
+          <label for="system.bonus" class='resource-label'>
+            {{localize 'SDM.Actor.Character.FIELDS.bonus.label'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.bonus' value='{{system.bonus}}' data-dtype='Number' disabled />
+          </div>
         </div>
-      </div>
-      {{/if}}
+        {{/if}}
 
-      {{#if (eq actor.type 'character')}}
-      <div class='resource flex-group-center'>
-        <label for="system.defense" class='resource-label'>
-          {{localize 'SDM.Actor.Character.FIELDS.defense.label'}}
-        </label>
-        <div class='resource-content flexrow flex-center flex-between'>
-          <input type='text' name='system.defense' value='{{system.defense}}' data-dtype='Number' disabled />
+        {{#if (eq actor.type 'character')}}
+        <div class='resource flex-group-center'>
+          <label for="system.armor" class='resource-label'>
+            {{localize 'SDM.Actor.Character.FIELDS.armor.label'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.armor' value='{{system.armor}}' data-dtype='Number' disabled />
+          </div>
         </div>
+        {{/if}}
+
+        {{#if (eq actor.type 'character')}}
+        <div class='resource flex-group-center'>
+          <label for="system.defense" class='resource-label'>
+            {{localize 'SDM.Actor.Character.FIELDS.defense.label'}}
+          </label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <input type='text' name='system.defense' value='{{system.defense}}' data-dtype='Number' disabled />
+          </div>
+        </div>
+        <div class='resource flex-group-center'>
+          <label class='resource-label'>Carried Weight</label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <span>{{numberFormat carriedWeight}}</span>
+          </div>
+        </div>
+        <div class='resource flex-group-center'>
+          <label class='resource-label rollable' data-context='rollable' data-action='heroicHealing'>Heroic Dice</label>
+          <div class='resource-content flexrow flex-center flex-between'>
+            <span>{{system.heroics.value}}</span>
+          </div>
+        </div>
+        {{/if}}
       </div>
-      {{/if}}
     </div>
-</header>
+  </header>
+  <header class=''>
+    <div class="main flexrow flex-group-center">
+      <div class='resources grid grid-5col'>
+        {{!-- <div class='abilities flexcol'> --}}
+          <div class='resources grid grid-3col'>
+            {{#each system.abilities as |ability key|}}
+            <div class="main grid-span-1">
+              <div class='ability flexrow flex-group-center'>
+                <span class='resource-label rollable flexlarge align-left' data-action='roll' data-context='rollable'
+                  data-key="{{key}}" data-label='{{localize (lookup @root.config.abilities key)}}'>{{localize (lookup
+                  @root.config.abilities key)}}</span>
+                <input type='text' name='system.abilities.{{key}}.full' value='{{ability.full}}' class="ability-score"
+                  data-dtype='Number' />
+                <input type='text' name='system.abilities.{{key}}.current' value='{{ability.current}}'
+                  class="ability-score" data-dtype='Number' />
+              </div>
+            </div>
+            {{/each}}
+          </div>
+          <div class='resources grid grid-2col'>
+            <div class="main grid-span-1">
+              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="melee">
+                <div>{{localize 'SDM.attacks.melee'}}</div>
+              </div>
+            </div>
+            <div class="main grid-span-1">
+              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="ranged">
+                <div>{{localize 'SDM.attacks.ranged'}}</div>
+              </div>
+            </div>
+            <div class="main grid-span-1">
+              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="fantascience">
+                <div>{{localize 'SDM.attacks.fantascience'}}</div>
+              </div>
+            </div>
+            <div class="main grid-span-1">
+              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="oldtech">
+                <div>{{localize 'SDM.attacks.oldtech'}}</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+</div>
