--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -18,11 +18,11 @@ $c-groove: #eeede0;
   --sdm-c-white: #{$c-white};
   --sdm-c-black: #{$c-black};
   --sdm-c-groove: #{$c-groove};
-  // --color-shadow-primary: rgb(193, 4, 250);
-  // --color-shadow-highlight: rgb(193, 4, 250);
-  // --color-border-highlight: rgb(193, 4, 250);
-  // --color-border-highlight-alt: rgb(193, 4, 250);
-  // --color-scrollbar:rgb(193, 4, 250);
+  --color-shadow-primary: rgb(193, 4, 250);
+  --color-shadow-highlight: rgb(193, 4, 250);
+  --color-border-highlight: rgb(193, 4, 250);
+  --color-border-highlight-alt: rgb(193, 4, 250);
+  --color-scrollbar:rgb(193, 4, 250);
 }
 
 .theme-dark {
