--- a/templates/actor/features.hbs
+++ b/templates/actor/features.hbs
@@ -1,16 +1,16 @@
 {{! Features Tab }}
 <section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='features'>
-  <section class='grid grid-3col'>
+  {{!-- <section class='grid grid-3col'>
     <aside class='sidebar'>
       {{! The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns. }}
-     
+
       </div>
     </aside>
-   
+
     {{! For the main features list, span the right two columns }}
-    {{!-- <section class='main grid-span-1'>
+    <section class='main grid-span-1'>
       <ol class='items-list'>
         <li class='item flexrow items-header'>
           <div class='item-name'>{{localize 'Skills'}}</div>
@@ -23,12 +23,12 @@
         </li>
         {{/each}}
       </ol>
-    </section> --}}
-  </section>
+    </section>
+  </section> --}}
   <div class="grid grid-3col">
-    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/gear.hbs"}}</div>
+    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/gears.hbs"}}</div>
     <div class="main grid-span-1">{{> "systems/sdm/templates/actor/traits.hbs"}}</div>
-    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/traits.hbs"}}</div>
+    <div class="main grid-span-1">{{> "systems/sdm/templates/actor/burdens.hbs"}}</div>
   </div>
   </div>
 </section>
