--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -12,12 +12,13 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-bottom: 10px;
+  //margin-bottom: 10px;
 
   .profile-img {
     flex: 0 0 100px;
     height: 100px;
     margin-right: 10px;
+    margin-top: 10px;
   }
 
   .header-fields {
@@ -27,6 +28,7 @@
 
 .sheet-tabs {
   flex: 0;
+  height: 30px;
 }
 
 .sheet-body,
@@ -51,4 +53,8 @@
   .tox-edit-area {
     padding: 0 8px;
   }
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px;
 }
