--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -32,6 +32,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  max-height: 380px;
   overflow-y: auto;
   scrollbar-width: thin;
   color: colors.$c-tan;
@@ -119,6 +120,6 @@
 
 // Example style for Sdm (can be removed if not needed).
 .item-formula {
-  flex: 0 0 200px;
+  flex: 0 0 80px;
   padding: 0 8px;
 }
