--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -4,44 +4,44 @@
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
       {{!-- <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div> --}}
-      <div class='item-formula'>Traits ({{traits.length}})</div>
+      <div class='item-formula'>Burdens ({{burdens.length}})</div>
       <div class='item-controls'>
         {{#if @root.editable}}
           <a
             class='item-control item-create'
-            title='{{localize "DOCUMENT.Create" type='trait'}}'
+            title='{{localize "DOCUMENT.Create" type='burden'}}'
             data-action='createDoc'
             data-document-class='Item'
-            data-type='trait'
+            data-type='burden'
           >
             <i class='fas fa-plus'></i>
-            {{localize 'DOCUMENT.New' type='trait'}}
+            {{localize 'DOCUMENT.New' type='burden'}}
           </a>
         {{/if}}
       </div>
     </li>
-    {{#each traits as |trait id|}}
+    {{#each burdens as |burden id|}}
       <li
         class='item flexrow'
-        data-item-id='{{trait._id}}'
+        data-item-id='{{burden._id}}'
         data-drag='true'
         data-document-class='Item'
       >
         <div class='item-name'>
           <div class='item-image'>
               <img
-                src='{{trait.img}}'
-                title='{{trait.name}}'
+                src='{{burden.img}}'
+                title='{{burden.name}}'
                 width='24'
                 height='24'
               />
           </div>
-          <div >{{trait.name}}</div>
-          {{#if trait.system.is_skill}}
+          <div >{{burden.name}}</div>
+          {{#if burden.system.is_skill}}
             <a class='rollable' data-roll-type='skill' data-action='roll'>
               <img
                 src='icons/weapons/swords/sword-simple-white.webp'
-                title='{{trait.name}}'
+                title='{{burden.name}}'
                 width='24'
                 height='24'
               />
@@ -51,7 +51,7 @@
         <div class='item-controls'>
           <a
             class='item-control item-edit'
-            title='{{localize "DOCUMENT.Update" type='Trait'}}'
+            title='{{localize "DOCUMENT.Update" type='Burden'}}'
             data-action='viewDoc'
           >
             <i class='fas fa-edit'></i>
@@ -59,7 +59,7 @@
           {{#if @root.editable}}
             <a
               class='item-control item-delete'
-              title='{{localize "DOCUMENT.Delete" type='Trait'}}'
+              title='{{localize "DOCUMENT.Delete" type='Burden'}}'
               data-action='deleteDoc'
             >
               <i class='fas fa-trash'></i>
