--- a/templates/actor/gears.hbs
+++ b/templates/actor/gears.hbs
@@ -2,11 +2,11 @@
 <section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='features'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
-      <div class='item-name'>{{localize 'Name'}}</div>
-      <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div>
+      <div class='item-name'></div>
+      <div class='item-formula'>Items ({{gears.length}})</div>
       <div class='item-controls'>
         {{#if @root.editable}}
-        <a class='item-control item-create' title='{{localize "DOCUMENT.Create" type=' Item'}}' data-action='createDoc'
+        <a class='item-control item-create' title='{{localize "DOCUMENT.Create" type=' item'}}' data-action='createDoc'
           data-document-class='Item' data-type='gear'>
           <i class='fas fa-plus'></i>
           {{localize 'DOCUMENT.New' type='item'}}
@@ -14,31 +14,34 @@
         {{/if}}
       </div>
     </li>
-    {{#each gear as |item id|}}
+    {{#each gears as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}' data-drag='true' data-document-class='Item'>
-      <div class='item-name'>
+      <div class='item-name flexrow align-left'>
         <div class='item-image'>
           <img src='{{item.img}}' title='{{item.name}}' width='24' height='24' />
         </div>
         <div>{{item.name}}</div>
-      </div>
-      <div class='item-formula item-prop flexrow'>
-        <div>
-          {{#if (eq item.type 'weapon')}}
-          <div class='rollable' data-roll-type='item' data-action='roll'>
-            <img src='icons/weapons/swords/sword-simple-white.webp' title='{{item.name}}' width='24' height='24' />
+        <div class='flexrow align-center'>
+          <div>
+            {{#if (eq item.type 'weapon')}}
+            <div class='rollable' data-roll-type='item' data-action='roll'>
+              <img src='icons/weapons/swords/sword-simple-white.webp' title='{{item.name}}' width='24' height='24' />
+            </div>
+            {{/if}}
+             {{#if item.system.versatile}}
+            <div class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
+              <img src='icons/weapons/swords/swords-short.webp' title='{{item.name}}' width='24' height='24' />
+            </div>
+            {{/if}}
           </div>
-          {{/if}}
-        </div>
-        <div>
-          {{#if item.system.versatile}}
-          <div class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
-            <img src='icons/weapons/swords/swords-short.webp' title='{{item.name}}' width='24' height='24' />
+          <div>
           </div>
-          {{/if}}
         </div>
       </div>
       <div class='item-controls'>
+        <a class="item-control">
+          <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied" data-tooltip="toggle readied status"></i>
+        </a>
         <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Gear'}}' data-action='viewDoc'>
           <i class='fas fa-edit'></i>
         </a>
