--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -29,6 +29,10 @@
         <label class='resource-label'>{{'Damage'}}</label>
         {{system.damage.base}}
       </div>
+       <div class='resource'>
+        <label class='resource-label'>Readied</label>
+        <i class="fa-regular fa-shield" style="{{getReadiedStyle system.readied}}" data-action="toggleReadied" data-tooltip="toggle readied"></i>
+      </div>
     </div>
     {{! You may prefer to have a separate header file instead of this if statement}}
     {{!-- {{#if (eq item.type 'base')}}
