--- a/templates/actor/gears.hbs
+++ b/templates/actor/gears.hbs
@@ -16,7 +16,7 @@
     </li>
     {{#each gears as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}' data-drag='true' data-document-class='Item'>
-      <div class='item-name flexrow align-left'>
+      <div class='item-name align-left'>
         <div class='item-image'>
           <img src='{{item.img}}' title='{{item.name}}' width='24' height='24' />
         </div>
@@ -40,7 +40,10 @@
       </div>
       <div class='item-controls'>
         <a class="item-control">
-          <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied" data-tooltip="toggle readied status"></i>
+          <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied" title="Toggle Readied Status"></i>
+        </a>
+        <a class="item-control">
+          <i class="fa-regular fa-exchange" data-action="transferItem" title="Transfer Gear"></i>
         </a>
         <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Gear'}}' data-action='viewDoc'>
           <i class='fas fa-edit'></i>
