refactor: :recycle: Rename heroic dice to hero dice and allow players changing other players rolls using their hero dice rolls

--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -120,6 +120,78 @@
 
 // Example style for Sdm (can be removed if not needed).
 .item-formula {
-  flex: 0 0 80px;
+  flex: 0 0 100px;
   padding: 0 8px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  margin: 0 5px;
+  vertical-align: middle;
+}
+
+/* Hide default checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* Slider Background */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #555;
+  transition: .4s;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+}
+
+/* Slider Circle */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: .4s;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+}
+
+/* Checked State - Foundry Orange */
+input:checked + .slider {
+  background-color: colors.$c-violet;
+}
+
+/* Move slider on checked */
+input:checked + .slider:before {
+  transform: translateX(20px);
+}
+
+/* Rounded Slider */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Disabled State */
+.switch input:disabled + .slider {
+  opacity: 0.5;
+  cursor: default;
+}
+
+.roll-icon {
+  font-size: 15px;
+  margin-right: 5px;
 }
