--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -8,6 +8,7 @@ $c-faint: #c9c7b8;
 $c-beige: #b5b3a4;
 $c-tan: #444444;
 $c-groove: #eeede0;
+$c-violet: rgb(134, 3, 173);
 
 // Depois mapeie para variáveis CSS
 :root {
