--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -4,7 +4,7 @@
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
       {{!-- <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div> --}}
-      <div class='item-formula'>Burdens ({{burdens.length}})</div>
+       <div class='item-formula'>Burdens [{{@root.burdenSlotsTaken}}/{{@root.system.burden_slots}}]</div>
       <div class='item-controls'>
         {{#if @root.editable}}
           <a
