--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -5,9 +5,9 @@
       <img class='profile-img' src='{{actor.img}}' data-edit='img' data-action='onEditImage' title='{{actor.name}}'
         height='100' width='100' />
       <div class="flexcol flex-group-center rollable" data-context='rollable' data-action='heroicHealing'>
-        <label class='resource-label'>Heroic Dice <i class="fas fa-dice-d6"></i></label>
+        <label class='resource-label'>Hero Dice <i class="fas fa-dice-d6"></i></label>
         <div class='resource-content flexrow flex-center'>
-          {{system.heroics.value}}
+          {{system.hero_dice.value}}
         </div>
       </div>
     </div>
