--- a/css/sdm.css
+++ b/css/sdm.css
@@ -278,6 +278,15 @@
 }
 
 /* Estilos específicos para sheets .sdm */
+.sdm {
+  /* Hide default checkbox */
+  /* Slider Background */
+  /* Slider Circle */
+  /* Checked State - Foundry Orange */
+  /* Move slider on checked */
+  /* Rounded Slider */
+  /* Disabled State */
+}
 .sdm :root {
   --sdm-c-dark: #191813;
   --sdm-c-faint: #c9c7b8;
@@ -477,8 +486,63 @@
   text-align: left;
 }
 .sdm .item-formula {
-  flex: 0 0 80px;
+  flex: 0 0 100px;
   padding: 0 8px;
+}
+.sdm .switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  margin: 0 5px;
+  vertical-align: middle;
+}
+.sdm .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.sdm .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #555;
+  transition: 0.4s;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+.sdm .slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+.sdm input:checked + .slider {
+  background-color: rgb(134, 3, 173);
+}
+.sdm input:checked + .slider:before {
+  transform: translateX(20px);
+}
+.sdm .slider.round {
+  border-radius: 34px;
+}
+.sdm .slider.round:before {
+  border-radius: 50%;
+}
+.sdm .switch input:disabled + .slider {
+  opacity: 0.5;
+  cursor: default;
+}
+.sdm .roll-icon {
+  font-size: 15px;
+  margin-right: 5px;
 }
 .sdm :root {
   --sdm-c-dark: #191813;
