--- a/templates/transfer-dialog.hbs
+++ b/templates/transfer-dialog.hbs
@@ -1,15 +1,15 @@
 <form>
-  <div class="grid grid-2col">
+  <h5>Transfer {{item.name}}</h5>
+  <div class="grid grid-2col flexcol">
     {{#if (eq item.system.size.unit "cash")}}
     <div class="form-group">
       <label>Amount:</label>
-      <input type="number" name="cashAmount" min="1" max="{{item.system.quantity}}"
-        required data-type="Number">
+      <input type="number" name="cashAmount" min="1" max="{{item.system.quantity}}" required data-type="Number" placeholder="100">
     </div>
     {{/if}}
-     <div class="form-group">
-      <label>Transfer to:</label>
-      <select name="targetActor" style="width: 100%">
+    <div class="form-group">
+      <label>to:</label>
+      <select name="targetActor">
         <option value=""></option>
         {{selectOptions actors valueAttr="id" labelAttr="name"}}
       </select>
