refactor: :recycle: Refactor UVG 1e skills to SDM attacks

--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -38,7 +38,7 @@
           </div>
           <div >{{burden.name}}</div>
           {{#if burden.system.is_skill}}
-            <a class='rollable' data-roll-type='skill' data-action='roll'>
+            <a class='rollable' data-roll-type='attack' data-action='roll'>
               <img
                 src='icons/weapons/swords/sword-simple-white.webp'
                 title='{{burden.name}}'
