--- a/templates/actor/features.hbs
+++ b/templates/actor/features.hbs
@@ -17,7 +17,7 @@
         </li>
         {{#each skills as |skill|}}
         <li class='item flexrow' data-item-id='{{skill.name}}'>
-          <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="{{skill.name}}">
+          <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="{{skill.name}}">
             <div>{{skill.name}}</div>
           </div>
         </li>
