--- a/templates/actor/npc/header.hbs
+++ b/templates/actor/npc/header.hbs
@@ -187,22 +187,22 @@
           </div>
           <div class='resources grid grid-2col'>
             <div class="main grid-span-1">
-              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="melee">
+              <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="melee">
                 <div>{{localize 'SDM.attacks.melee'}}</div>
               </div>
             </div>
             <div class="main grid-span-1">
-              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="ranged">
+              <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="ranged">
                 <div>{{localize 'SDM.attacks.ranged'}}</div>
               </div>
             </div>
             <div class="main grid-span-1">
-              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="fantascience">
+              <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="fantascience">
                 <div>{{localize 'SDM.attacks.fantascience'}}</div>
               </div>
             </div>
             <div class="main grid-span-1">
-              <div class='item-name rollable' data-roll-type='skill' data-action='roll' data-skill="oldtech">
+              <div class='item-name rollable' data-roll-type='attack' data-action='roll' data-attack="oldtech">
                 <div>{{localize 'SDM.attacks.oldtech'}}</div>
               </div>
             </div>
