--- a/templates/actor/character/header.hbs
+++ b/templates/actor/character/header.hbs
@@ -177,9 +177,9 @@
                 <span class='resource-label rollable' data-action='roll' data-context='rollable'
                   data-key="{{key}}" data-label='{{localize (lookup @root.config.abilities key)}}'>{{localize (lookup
                   @root.config.abilities key)}}</span>
-                <input type='text' name='system.abilities.{{key}}.full' value='{{ability.final_full}}' class="ability-score"
+                <input type='text' name='system.abilities.{{key}}.full' value='{{ability.full}}' class="ability-score"
                   data-dtype='Number' />
-                <input type='text' name='system.abilities.{{key}}.current' value='{{ability.final_current}}'
+                <input type='text' name='system.abilities.{{key}}.current' value='{{ability.current}}'
                   class="ability-score" data-dtype='Number' />
               </div>
             </div>
@@ -187,22 +187,22 @@
           </div>
           <div class='resources grid grid-2col'>
             <div class="ability grid-span-1 flexrow">
-              <div class='resource-label rollable' data-roll-type='skill' data-action='roll' data-skill="melee">
+              <div class='resource-label rollable' data-roll-type='attack' data-action='roll' data-attack="melee">
                 <div>{{localize 'SDM.attacks.melee'}}</div>
               </div>
             </div>
             <div class="ability grid-span-1 flexrow">
-              <div class='resource-label rollable' data-roll-type='skill' data-action='roll' data-skill="ranged">
+              <div class='resource-label rollable' data-roll-type='attack' data-action='roll' data-attack="ranged">
                 <div>{{localize 'SDM.attacks.ranged'}}</div>
               </div>
             </div>
             <div class="ability grid-span-1 flexrow">
-              <div class='resource-label rollable' data-roll-type='skill' data-action='roll' data-skill="fantascience">
+              <div class='resource-label rollable' data-roll-type='attack' data-action='roll' data-attack="fantascience">
                 <div>{{localize 'SDM.attacks.fantascience'}}</div>
               </div>
             </div>
             <div class="ability grid-span-1 flexrow">
-              <div class='resource-label rollable' data-roll-type='skill' data-action='roll' data-skill="oldtech">
+              <div class='resource-label rollable' data-roll-type='attack' data-action='roll' data-attack="oldtech">
                 <div>{{localize 'SDM.attacks.oldtech'}}</div>
               </div>
             </div>
