--- a/templates/actor/traits.hbs
+++ b/templates/actor/traits.hbs
@@ -38,7 +38,7 @@
           </div>
           <div >{{trait.name}}</div>
           {{#if trait.system.is_skill}}
-            <a class='rollable' data-roll-type='skill' data-action='roll'>
+            <a class='rollable' data-roll-type='attack' data-action='roll'>
               <img
                 src='icons/weapons/swords/sword-simple-white.webp'
                 title='{{trait.name}}'
