--- a/templates/actor/gears.hbs
+++ b/templates/actor/gears.hbs
@@ -40,9 +40,9 @@
         <div class='flexrow align-center'>
           <div>
             {{#if item.system.versatile}}
-            <div class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
+            {{!-- <div class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
               <img src='icons/weapons/swords/swords-short.webp' title='{{item.name}}' width='24' height='24' />
-            </div>
+            </div> --}}
             {{/if}}
           </div>
           <div>
